# prandom

./: Cargo.toml  README.md
src/: lib.rs  linear_congruential.rs  mersenne_twister.rs  multiply_with_carry.rs
